--- a/styles.qss
+++ b/styles.qss
@@ -4,12 +4,9 @@ QMainWindow {
     background-color: #96c1c4;
 }
 
-QTabWidget {
-    background-color: none;
-}
 
 QMenuBar {
-    background-color: whiteSmoke;
+    background-color: Whitesmoke;
 }
 
 QPushButton {
@@ -17,6 +14,10 @@ QPushButton {
     color: black;
     border: 1px solid black;
     border-radius: 5px;
+}
+
+QToolBar {
+    background-color: #b5e5e5;
 }
 
 QHeaderView::section {
