--- a/templates/VenPrincipal.ui
+++ b/templates/VenPrincipal.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../../../../../.designer/img/logo.ico</normaloff>../../../../../.designer/img/logo.ico</iconset>
+    <normaloff>../img/logo.ico</normaloff>../img/logo.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
@@ -491,7 +491,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
+              <normaloff>../img/calendar.png</normaloff>../img/calendar.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -539,7 +539,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
+              <normaloff>../img/calendar.png</normaloff>../img/calendar.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -1106,7 +1106,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
+                <normaloff>../img/calendar.png</normaloff>../img/calendar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -1172,7 +1172,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../../../.designer/img/buscar.png</normaloff>../../../.designer/img/buscar.png</iconset>
+                <normaloff>../img/buscar.png</normaloff>../img/buscar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -1720,12 +1720,18 @@
                 <property name="text">
                  <string>Alquiler</string>
                 </property>
+                <property name="checkable">
+                 <bool>true</bool>
+                </property>
                </widget>
               </item>
               <item>
                <widget class="QCheckBox" name="chkVentaProp">
                 <property name="text">
                  <string>Venta</string>
+                </property>
+                <property name="checkable">
+                 <bool>true</bool>
                 </property>
                </widget>
               </item>
@@ -1895,7 +1901,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
+                <normaloff>../img/calendar.png</normaloff>../img/calendar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -2003,8 +2009,17 @@
     <property name="title">
      <string>Herramientas</string>
     </property>
+    <widget class="QMenu" name="menuExportar_Datos">
+     <property name="title">
+      <string>Exportar Datos</string>
+     </property>
+     <addaction name="actionExportar_Clientes_CSV"/>
+     <addaction name="actionExportar_Clientes_JSON"/>
+    </widget>
     <addaction name="actionCrear_Backup"/>
     <addaction name="actionRestaurar_Backup"/>
+    <addaction name="separator"/>
+    <addaction name="menuExportar_Datos"/>
    </widget>
    <widget class="QMenu" name="menuAyuda">
     <property name="title">
@@ -2051,6 +2066,9 @@
   <action name="actionCrear_Backup">
    <property name="text">
     <string>Crear Backup</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+B</string>
    </property>
   </action>
   <action name="actionRestaurar_Backup">
@@ -2103,6 +2121,16 @@
    </property>
    <property name="text">
     <string>FiltrarbarProp</string>
+   </property>
+  </action>
+  <action name="actionExportar_Clientes_CSV">
+   <property name="text">
+    <string>Exportar Clientes CSV</string>
+   </property>
+  </action>
+  <action name="actionExportar_Clientes_JSON">
+   <property name="text">
+    <string>Exportar Clientes JSON</string>
    </property>
   </action>
  </widget>
